// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a custom icon modal with an existing icon 1`] = `
<EuiModal
  className="mapsCustomIconModal"
  cutoff={0.3}
  initialFocus=".mapsCustomIconForm__name"
  maxWidth={700}
  name="square"
  onClose={[Function]}
  radius={0.15}
  svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
  symbolId="__kbn__custom_icon_sdf__foobar"
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h3>
        Edit custom icon
      </h3>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiFlexGroup
      alignItems="flexStart"
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        className="mapsCustomIconForm"
        grow={2}
      >
        <EuiFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText="34 characters remaining"
          label="Name"
          labelType="label"
        >
          <EuiFieldText
            className="mapsCustomIconForm__name"
            data-test-subj="mapsCustomIconForm-name"
            onChange={[Function]}
            required={true}
            value="square"
          />
        </EuiFormRow>
        <EuiFormRow
          className="mapsCustomIconForm__thumbnail"
          describedByIds={Array []}
          display="rowCompressed"
          error=""
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          isInvalid={false}
          label="SVG icon"
          labelType="label"
        >
          <EuiFilePicker
            accept=".svg"
            className="mapsImageUpload"
            compressed={false}
            display="large"
            initialPromptText="Select or drag and drop an SVG icon"
            isInvalid={false}
            onChange={[Function]}
            required={true}
          />
        </EuiFormRow>
        <EuiText
          className="mapsCustomIconForm__thumbnailHelp"
          size="xs"
        >
          <p>
            Upload your SVG icon here and preview the rendering on the right.
          </p>
        </EuiText>
        <EuiSpacer />
        <EuiFormRow
          className="mapsCustomIconForm__cutoff"
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label={
            <EuiToolTip
              content="Adjusts the balance of the signed distance function between the inside (approaching 1) and outside (approaching 0) of the icon."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              <React.Fragment>
                Alpha threshold
                 
                <EuiIcon
                  color="subdued"
                  type="questionInCircle"
                />
              </React.Fragment>
            </EuiToolTip>
          }
          labelType="label"
        >
          <ValidatedRange
            className="mapsCutoffRange"
            compressed={true}
            max={1}
            min={0}
            onChange={[Function]}
            showInput={true}
            showLabels={true}
            step={0.001}
            value={0.3}
          />
        </EuiFormRow>
        <EuiFormRow
          className="mapsCustomIconForm__radius"
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label={
            <EuiToolTip
              content="Adjusts the size of the signed distance function around the Alpha threshold as a percent of icon size."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              <React.Fragment>
                Radius
                 
                <EuiIcon
                  color="subdued"
                  type="questionInCircle"
                />
              </React.Fragment>
            </EuiToolTip>
          }
          labelType="label"
        >
          <ValidatedRange
            className="mapsRadiusRange"
            compressed={true}
            max={1}
            min={0}
            onChange={[Function]}
            showInput={true}
            showLabels={true}
            step={0.001}
            value={0.15}
          />
        </EuiFormRow>
      </EuiFlexItem>
      <EuiFlexItem
        className="mapsIconPreview__wrapper mapsCustomIconForm__preview"
        grow={1}
      >
        <EuiTitle
          size="xxxs"
        >
          <h4>
            <EuiToolTip
              content="Dynamic styling requires rendering SVG icons using a signed distance function. As a result, sharp corners and intricate details may not render correctly. You may be able to tweak the Alpha threshold and Radius for better results."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              Icon preview
               
              <EuiIcon
                color="subdued"
                type="questionInCircle"
              />
            </EuiToolTip>
          </h4>
        </EuiTitle>
        <EuiSpacer
          size="s"
        />
        <IconPreview
          cutoff={0.3}
          isSvgInvalid={false}
          radius={0.15}
          svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[Function]}
        >
          Cancel
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="mapsCustomIconForm-submit"
          fill={true}
          isDisabled={false}
          onClick={[Function]}
        >
          Save
        </EuiButton>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          color="danger"
          data-test-subj="mapsCustomIconForm-submit"
          onClick={[Function]}
        >
          Delete
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;

exports[`should render an empty custom icon modal 1`] = `
<EuiModal
  className="mapsCustomIconModal"
  cutoff={0.25}
  initialFocus=".mapsCustomIconForm__name"
  maxWidth={700}
  onClose={[Function]}
  radius={0.25}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h3>
        Custom Icon
      </h3>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiFlexGroup
      alignItems="flexStart"
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        className="mapsCustomIconForm"
        grow={2}
      >
        <EuiFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText="40 characters remaining"
          label="Name"
          labelType="label"
        >
          <EuiFieldText
            className="mapsCustomIconForm__name"
            data-test-subj="mapsCustomIconForm-name"
            onChange={[Function]}
            required={true}
            value=""
          />
        </EuiFormRow>
        <EuiFormRow
          className="mapsCustomIconForm__thumbnail"
          describedByIds={Array []}
          display="rowCompressed"
          error=""
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          isInvalid={false}
          label="SVG icon"
          labelType="label"
        >
          <EuiFilePicker
            accept=".svg"
            className="mapsImageUpload"
            compressed={false}
            display="large"
            initialPromptText="Select or drag and drop an SVG icon"
            isInvalid={false}
            onChange={[Function]}
            required={true}
          />
        </EuiFormRow>
        <EuiText
          className="mapsCustomIconForm__thumbnailHelp"
          size="xs"
        >
          <p>
            Upload your SVG icon here and preview the rendering on the right.
          </p>
        </EuiText>
        <EuiSpacer />
        <EuiFormRow
          className="mapsCustomIconForm__cutoff"
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label={
            <EuiToolTip
              content="Adjusts the balance of the signed distance function between the inside (approaching 1) and outside (approaching 0) of the icon."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              <React.Fragment>
                Alpha threshold
                 
                <EuiIcon
                  color="subdued"
                  type="questionInCircle"
                />
              </React.Fragment>
            </EuiToolTip>
          }
          labelType="label"
        >
          <ValidatedRange
            className="mapsCutoffRange"
            compressed={true}
            max={1}
            min={0}
            onChange={[Function]}
            showInput={true}
            showLabels={true}
            step={0.001}
            value={0.25}
          />
        </EuiFormRow>
        <EuiFormRow
          className="mapsCustomIconForm__radius"
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label={
            <EuiToolTip
              content="Adjusts the size of the signed distance function around the Alpha threshold as a percent of icon size."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              <React.Fragment>
                Radius
                 
                <EuiIcon
                  color="subdued"
                  type="questionInCircle"
                />
              </React.Fragment>
            </EuiToolTip>
          }
          labelType="label"
        >
          <ValidatedRange
            className="mapsRadiusRange"
            compressed={true}
            max={1}
            min={0}
            onChange={[Function]}
            showInput={true}
            showLabels={true}
            step={0.001}
            value={0.25}
          />
        </EuiFormRow>
      </EuiFlexItem>
      <EuiFlexItem
        className="mapsIconPreview__wrapper mapsCustomIconForm__preview"
        grow={1}
      >
        <EuiTitle
          size="xxxs"
        >
          <h4>
            <EuiToolTip
              content="Dynamic styling requires rendering SVG icons using a signed distance function. As a result, sharp corners and intricate details may not render correctly. You may be able to tweak the Alpha threshold and Radius for better results."
              delay="regular"
              display="inlineBlock"
              position="top"
            >
              Icon preview
               
              <EuiIcon
                color="subdued"
                type="questionInCircle"
              />
            </EuiToolTip>
          </h4>
        </EuiTitle>
        <EuiSpacer
          size="s"
        />
        <IconPreview
          cutoff={0.25}
          isSvgInvalid={true}
          radius={0.25}
          svg=""
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[Function]}
        >
          Cancel
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="mapsCustomIconForm-submit"
          fill={true}
          isDisabled={true}
          onClick={[Function]}
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;
